# platypus_eventer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/platypus_eventer/: analysis.py  main.py  status.py  streamer.py
stuff/: BoxOfTricks.fzz  EVENT.ipynb  SFTP_uploader.ipynb  SFTP_uploader.py  analysis.py  config.ini  detect_pulses.ipynb  general_SEF_inspector.ipynb  main.ipynb  main.py  process_events-synchroniser.ipynb  process_events.ipynb  processor-advanced-quokka-stepwise.ipynb  processor-advanced-quokka.ipynb  quokka_process.py  quokka_processor.ipynb  rsync_uploader.py  sftp_grabber.ipynb  spi_mcp3008.ipynb  status.py  streamer.py
stuff/DAQ_2025-06-19T11-36-57/DATA_0/: final_state.txt
stuff/hardware_check/: EVENT.ipynb  detect_pulses.ipynb  gravityi2c.ipynb  lgpio.ipynb  main.ipynb  spi_mcp3008.ipynb  textstatus.egi.txt
stuff/hardware_check/DAQ_2025-06-19T11-36-57/DATASET_0/: state.txt
