[project]
name = "platypus-eventer"
version = "2025.08.08"
dependencies = [
    "numpy",
    "refnx",
]
authors = [
  {name = "Andrew Nelson", email = "andyfaff@gmail.com"},
]
license = "BSD-3-Clause"
[project.scripts]
platypus_eventer-cli = "platypus_eventer.main:_main_entry"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"
